// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add a field 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_c3e59f8b85cd9add5612c007fb3ce30456e5cd06c926583f7457652449323868 {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_0 = H_c3e59f8b85cd9add5612c007fb3ce30456e5cd06c926583f7457652449323868;
"
`;

exports[`Add a field with a default value 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_036cb58d4009b695ef9c0a35e42cfd356c5ca922f3340d79db2364efd0d0da4c {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field || \\"A value\\";
  }
}

export type V_0 = H_036cb58d4009b695ef9c0a35e42cfd356c5ca922f3340d79db2364efd0d0da4c;
"
`;

exports[`Delete a field 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 * 3. Adding another field
 * 4. didn&#39;t actually need that
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_c3e59f8b85cd9add5612c007fb3ce30456e5cd06c926583f7457652449323868 {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_0 = H_c3e59f8b85cd9add5612c007fb3ce30456e5cd06c926583f7457652449323868;

/**
 * @param test_field A field that helps testing
 * @param test_field2 A field that helps testing, again
 *
 * @sealed
 *
 */
export class H_3c1b77e268fa9b90684f1cca49f38385dcb2197b37bd686163019acb53a05342 {
  readonly test_field: string | null;

  readonly test_field2: string;

  constructor(test_field: string | null, test_field2: string) {
    this.test_field = test_field;

    this.test_field2 = test_field2 || \\"blah\\";
  }
}

export type V_1 = H_3c1b77e268fa9b90684f1cca49f38385dcb2197b37bd686163019acb53a05342;

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_eb87414a9c9aea122801f9f9918dd3d570adf8b2906deb164192832407201470 {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_2 = H_eb87414a9c9aea122801f9f9918dd3d570adf8b2906deb164192832407201470;
"
`;

exports[`Make a field optional 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 * 3. Oops needed to make it optional
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_e960605cda10a46f833a32ce0d9699ae1a35b1e764a54dffa6df08691f99d202 {
  readonly test_field: string;

  constructor(test_field: string) {
    this.test_field = test_field;
  }
}

export type V_0 = H_e960605cda10a46f833a32ce0d9699ae1a35b1e764a54dffa6df08691f99d202;

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_4af369e10d1e7103f4a16e9849140032afd335a48eaa464f36ee1791e998a37e {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_1 = H_4af369e10d1e7103f4a16e9849140032afd335a48eaa464f36ee1791e998a37e;
"
`;

exports[`Multiple types with type reference 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * A useful type
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_c68b1dfae49d22c7332dcfcb86145926907e4171e3a7bb1f3861e9e3b0c2bdfb {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_0 = H_c68b1dfae49d22c7332dcfcb86145926907e4171e3a7bb1f3861e9e3b0c2bdfb;
"
`;

exports[`Multiple types with type reference 2`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * a useful type
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. asdf
 */

import * as Test from \\"./Test\\";

/**
 * @param test_field2 A reference
 *
 * @sealed
 *
 */
export class H_e396d1be414c1504f56969feff04b4bcdf1c52ca1cb653c75f959a3a24d37c49 {
  readonly test_field2: Test.h_c68b1dfae49d22c7332dcfcb86145926907e4171e3a7bb1f3861e9e3b0c2bdfb;

  constructor(
    test_field2: Test.h_c68b1dfae49d22c7332dcfcb86145926907e4171e3a7bb1f3861e9e3b0c2bdfb
  ) {
    this.test_field2 = test_field2;
  }
}

export type V_0 = H_e396d1be414c1504f56969feff04b4bcdf1c52ca1cb653c75f959a3a24d37c49;
"
`;

exports[`Rename a field 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 * 3. Renaming a field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_f504fb22397795f0f503db79829121561d81e430e7d0d1bef9139625cba94e40 {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field || \\"A value\\";
  }
}

export type V_0 = H_f504fb22397795f0f503db79829121561d81e430e7d0d1bef9139625cba94e40;

/**
 * @param renamed_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_ec5f673726117df5a56796abaad8f15c03fed119159cf951c1a5ca6248d732b0 {
  readonly renamed_field: string | null;

  constructor(renamed_field: string | null) {
    this.renamed_field = renamed_field || \\"A value\\";
  }
}

export type V_1 = H_ec5f673726117df5a56796abaad8f15c03fed119159cf951c1a5ca6248d732b0;
"
`;

exports[`Type with GroupAction 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 * 3. Adding another field
 * 4. Adding yet another field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_56fe5eaa9656364c83c84208b60dd08e81bc05eb37816cc21eb93618af57150d {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_0 = H_56fe5eaa9656364c83c84208b60dd08e81bc05eb37816cc21eb93618af57150d;

/**
 * @param test_field A field that helps testing
 * @param test_field2 A field that helps testing, again
 * @param test_field3 Yet another field for testing
 *
 * @sealed
 *
 */
export class H_bb0785e92709010380229df8b379c9f411db9447547b8f285c4647ec91667e7d {
  readonly test_field: string | null;

  readonly test_field2: string;

  readonly test_field3: number;

  constructor(
    test_field: string | null,
    test_field2: string,
    test_field3: number
  ) {
    this.test_field = test_field;

    this.test_field2 = test_field2 || \\"blah\\";

    this.test_field3 = test_field3;
  }
}

export type V_1 = H_bb0785e92709010380229df8b379c9f411db9447547b8f285c4647ec91667e7d;
"
`;

exports[`Type with deprecated and dont generate 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 * 3. Adding another field
 * 4. Adding yet another field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_c3e59f8b85cd9add5612c007fb3ce30456e5cd06c926583f7457652449323868 {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_0 = H_c3e59f8b85cd9add5612c007fb3ce30456e5cd06c926583f7457652449323868;

/**
 * @param test_field A field that helps testing
 * @param test_field2 A field that helps testing, again
 *
 * @sealed
 *
 */
export class H_3c1b77e268fa9b90684f1cca49f38385dcb2197b37bd686163019acb53a05342 {
  readonly test_field: string | null;

  readonly test_field2: string;

  constructor(test_field: string | null, test_field2: string) {
    this.test_field = test_field;

    this.test_field2 = test_field2 || \\"blah\\";
  }
}

export type V_1 = H_3c1b77e268fa9b90684f1cca49f38385dcb2197b37bd686163019acb53a05342;

/**
 * @param test_field A field that helps testing
 * @param test_field2 A field that helps testing, again
 * @param test_field3 Yet another field for testing
 *
 * @sealed
 *
 */
export class H_7cc89e1a3e8006a4253c348be2802baddcde45ffea24e1aecc62a1f0113f0bd3 {
  readonly test_field: string | null;

  readonly test_field2: string;

  readonly test_field3: number;

  constructor(
    test_field: string | null,
    test_field2: string,
    test_field3: number
  ) {
    this.test_field = test_field;

    this.test_field2 = test_field2 || \\"blah\\";

    this.test_field3 = test_field3;
  }
}

export type V_2 = H_7cc89e1a3e8006a4253c348be2802baddcde45ffea24e1aecc62a1f0113f0bd3;
"
`;

exports[`Type with latest 1`] = `
"/**
 * **GENERATED CODE DO NOT EDIT!**
 *
 * Test
 *
 * # Change Log:
 * 1. Creating a new type
 * 2. Adding a field
 * 3. Adding another field
 * 4. Adding yet another field
 */

/**
 * @param test_field A field that helps testing
 *
 * @sealed
 *
 */
export class H_56fe5eaa9656364c83c84208b60dd08e81bc05eb37816cc21eb93618af57150d {
  readonly test_field: string | null;

  constructor(test_field: string | null) {
    this.test_field = test_field;
  }
}

export type V_0 = H_56fe5eaa9656364c83c84208b60dd08e81bc05eb37816cc21eb93618af57150d;

/**
 * @param test_field A field that helps testing
 * @param test_field2 A field that helps testing, again
 *
 * @sealed
 *
 */
export class H_4ce3d4cfba96f0cdcce4bf1d2812eea0c5b1cf529ac93763f6f33d0600a652f0 {
  readonly test_field: string | null;

  readonly test_field2: string;

  constructor(test_field: string | null, test_field2: string) {
    this.test_field = test_field;

    this.test_field2 = test_field2 || \\"blah\\";
  }
}

export type V_1 = H_4ce3d4cfba96f0cdcce4bf1d2812eea0c5b1cf529ac93763f6f33d0600a652f0;

/**
 * @param test_field A field that helps testing
 * @param test_field2 A field that helps testing, again
 * @param test_field3 Yet another field for testing
 *
 * @sealed
 *
 */
export class Latest {
  readonly test_field: string | null;

  readonly test_field2: string;

  readonly test_field3: number;

  constructor(
    test_field: string | null,
    test_field2: string,
    test_field3: number
  ) {
    this.test_field = test_field;

    this.test_field2 = test_field2 || \\"blah\\";

    this.test_field3 = test_field3;
  }
}
"
`;
